<resources>
    <string name="app_name">Sport App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="texte_acceuil">Bienvenue</string>
    <string name="bouton_inscription">Inscription</string>
    <string name="bouton_profil">Accès au profil</string>

    <string-array name="sexe_array">
        <item>Sélectionner</item>
        <item>Homme</item>
        <item>Femme</item>
        <item>Autre</item>
    </string-array>

    <string-array name="niveau_array">
        <item>Niveau</item>
        <item>Novice</item>
        <item>Débutant</item>
        <item>Confirmé</item>
        <item>Avancé</item>
        <item>Expert</item>
    </string-array>

    <string name="bouton_valider">Valider</string>

    <string-array name="disponibilites_array">
        <item>Disponibilités</item>
        <item>1j/7</item>
        <item>2j/7</item>
        <item>3j/7</item>
        <item>4j/7</item>
        <item>5j/7</item>
        <item>6j/7</item>
        <item>7j/7</item>
    </string-array>

    <string-array name="objectifs_array">
        <item>Objectifs</item>
        <item>Prise de masse</item>
        <item>Athlète</item>
        <item>Force</item>
    </string-array>

    <string-array name="temps_par_seance_array">
        <item>Temps par séance</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1h</item>
        <item>Supérieur à 1h</item>
    </string-array>
    <string name="age_utilisateur">Age</string>
    <string name="taille_utilisateur">Taille (cm)</string>
    <string name="poids_utilisateur">Poids (kg)</string>
    <string name="login">Login :</string>
    <string name="password">Mot de passe :</string>
    <string name="ou">ou</string>
    <string name="connexion">Connexion</string>
    <string name="test_d_valuation">Test d\'évaluation</string>
    <string name="prochaine_s_ance">Prochaine séance</string>
    <string name="informations">Informations</string>
    <string name="corde_sauter">Corde à sauter</string>
    <string name="halt_re">Haltère</string>
    <string name="poulie">Poulie</string>
    <string name="barre_de_traction">Barre de traction</string>
    <string name="mat_riel_disponible">Quels matériels avez-vous ?</string>
    <string name="barre_et_poids">Barre et poids</string>
    <string name="sexe_text">Sexe :</string>
    <string name="date_de_naissance_text">Date de naissance :</string>
    <string name="taille_text">Taille (cm) :</string>
    <string name="poids_text">Poids (kg) :</string>
    <string name="error">Error</string>
    <string name="bonjour">Bonjour</string>
    <string name="play_description">Play_img</string>
    <string name="play_text">Démarer une séance</string>
    <string name="setting_text">Modifier le profil</string>
    <string name="stats_text">Stats</string>
    <string name="history_text">Historique</string>
    <string name="stats_button">stats</string>
    <string name="history_button">history</string>
    <string name="setting_button">setting</string>
    <string name="change">Modifier</string>
    <string name="mdp">Mot de passe : ******</string>
    <string name="objectif">Objectif :</string>
    <string name="niveau">Niveau :</string>
    <string name="disponibilite_text">Disponibilités :</string>
    <string name="save">Enregistrer</string>
    <string name="nouveau_login">Nouveau login</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="change_materiels">Modifier les matériels possédés</string>
    <string name="titre_exercice">Titre de l\'exercice</string>
    <string name="nb_repet">Nombre de répétition :</string>
    <string name="zero">0</string>
    <string name="continue_text">Terminé ?</string>
    <string name="repos">Repos</string>
    <string name="pass">Passer</string>
    <string name="continu">Continuer</string>
    <string name="image_text" />
    <string name="felicitations">Félicitations, vous avez fini votre entrainement</string>
    <string name="toucher_pour_continuer">Toucher pour continuer</string>
    <string name="todo">TODO</string>
    <string name="barre">Barre</string>
    <string name="barre_ez">Barre_EZ</string>
</resources>
